# protontune

./: .gitignore  LICENSE  README.md  pyproject.toml
protontune/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  hardware.py  models.py  proton.py  protondb.py  scoring.py  settings.py  steam.py  utils.py
tests/: __init__.py  test_config.py  test_hardware.py  test_proton.py  test_scoring.py  test_steam.py
